request #26770 Tracker name no longer visible in kanban configuration modale

--- a/plugins/agiledashboard/themes/BurningParrot/css/kanban/_edit-kanban.scss
+++ b/plugins/agiledashboard/themes/BurningParrot/css/kanban/_edit-kanban.scss
@@ -29,10 +29,6 @@
     margin: 0 3px 0 0;
 }
 
-.edit-kanban-title-tracker-link {
-    color: var(--tlp-white-color);
-}
-
 .edit-kanban-label-form,
 .edit-kanban-column-configuration,
 .edit-kanban-tracker-reports {
